<resources>
    <string name="app_name">CodeWars</string>
    <string name="completed_challenges">Completed Challenges</string>
    <string name="authored_challenges">Authored Challenges</string>
    <string name="name">Name:</string>
    <string name="rank">Rank:</string>
    <string name="language">Language:</string>
    <string name="points">Points:</string>
    <string name="player_name">Player name</string>
    <string name="next_button">Next button</string>
    <string name="last_5_results">LAST 5 RESULTS</string>
    <string name="slug">Slug</string>
    <string name="category">Category</string>
    <string name="languages">Languages</string>
    <string name="url">URL</string>
    <string name="creator">Creator</string>
    <string name="creator_url">Creator URL</string>
    <string name="sort">Sort</string>
</resources>